--- a/private-chain/package.json
+++ b/private-chain/package.json
@@ -2,9 +2,9 @@
   "name": "publish_auth",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "node app.js"
+    "test": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/nkkumawat/publish_auth#readme",
   "dependencies": {
+    "express": "^4.16.4",
     "ganache-cli": "^6.3.0",
-    "truffle": "^5.0.3"
+    "truffle": "^5.0.3",
+    "truffle-contract": "^4.0.5",
+    "web3": "^1.0.0-beta.46"
   }
 }
