--- a/private-chain/package.json
+++ b/private-chain/package.json
@@ -20,7 +20,7 @@
     "express": "^4.16.4",
     "ganache-cli": "^6.3.0",
     "truffle": "^5.0.3",
-    "truffle-contract": "^4.0.5",
-    "web3": "^1.0.0-beta.46"
+    "truffle-contract": "^1.1.11",
+    "web3": "^0.20.0"
   }
 }
