--- a/private-chain/package.json
+++ b/private-chain/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "ganache-cli": "^6.3.0",
+    "mongoose": "~3.6.17",
     "truffle": "^5.0.3",
     "truffle-contract": "^1.1.11",
-    "web3": "^0.20.0"
+    "web3": "^0.20.7",
+    "web3-eth-accounts": "^1.0.0-beta.46"
   }
 }
