--- a/private-chain/package.json
+++ b/private-chain/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "publish_auth",
-  "version": "1.0.0",
+  "name": "Publication_Auth",
+  "version": "0.0.1",
   "description": "",
-  "main": "server.js",
   "scripts": {
-    "test": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nkkumawat/publish_auth.git"
+    "start": "nodemon server.js",
+    "test": "truffle test test/*"
   },
   "author": "Narendra Kumawat",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nkkumawat/publish_auth/issues"
-  },
-  "homepage": "https://github.com/nkkumawat/publish_auth#readme",
-  "dependencies": {
-    "express": "^4.16.4",
-    "ganache-cli": "^6.3.0",
-    "mongoose": "~3.6.17",
-    "truffle": "^5.0.3",
+  "license": "MIT",
+  "devDependencies": {
+    "css-loader": "^0.26.1",
+    "json-loader": "^0.5.4",
+    "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.11",
-    "web3": "^0.20.7",
-    "web3-eth-accounts": "^1.0.0-beta.46"
+    "web3": "^0.20.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.6.1",
+    "express": "^4.16.2",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "nodemon": "^1.14.12"
   }
 }
