--- a/PriChain/package.json
+++ b/PriChain/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.1",
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.4",
+    "pdf-image": "^2.0.0",
     "request": "^2.85.0",
     "sequelize": "^4.37.7",
     "web3": "^1.0.0-beta.48",
